# dig

./: .gitignore  LICENSE  README.md  pyproject.toml
dig/: __init__.py
dig/agent/: __init__.py  entity.py  mailbox.py
dig/graph/: __init__.py  delivery.py  graph.py  roster.py
dig/heal/: __init__.py  apply.py  healer.py  intervention.py  run.py
dig/heal/healers/: __init__.py  deadlock.py  dependency_warning.py  excessive_rerouting.py  incomplete_coverage.py  missed_submission.py  orphan.py  repeated_efforts.py
dig/interface/: __init__.py  agent.py
dig/node/: __init__.py  activation.py  event.py
dig/util/: __init__.py  validate.py
dig/views/: __init__.py
dig/views/agent/: __init__.py  view.py
dig/views/bipartite/: __init__.py  detail.py  lineage.py  view.py
dig/viz/: __init__.py  config.py  save.py  styles.py
dig/viz/html/: __init__.py  agent_graph_view.py  bipartite_view.py  primitives.py  shell.py
dig/viz/html/assets/: shell.css  shell.js
dig/viz/mpl/: __init__.py  live.py  realtime.py
dig/viz/projection/: __init__.py  layout.py  scene.py
docs/: conf.py  index.md  reference.md
docs/guide/: concept.md  interface.md  quickstart.md
docs/guide/concept/: graph.md  healing.md  nodes.md
docs/guide/interface/: agent.md  examples.md  minimum.md
docs/reference/: graph.md  healing.md  interface.md  nodes.md  views.md
examples/: count_frequency_domain.py  hello_dig.py  hello_dig_langgraph.py  research_domain.py
scripts/: build_docs.sh  install.sh
